# IADevops2026

./: .gitignore
.github/workflows/: quality.yml
doc/: arch-medallon.md
practicas/02-github-mcp-server/: README.md  pyproject.toml
practicas/02-github-mcp-server/src/github_mcp_server/: __init__.py  config.py  github_client.py  server.py
practicas/02-github-mcp-server/tests/: test_github_client.py  test_server.py
practicas/03-repository-rules/: README.md
scripts/: validate_conventional_commits.py
tests/: test_validate_conventional_commits.py
