[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "iadevops2026-github-mcp-server"
version = "0.1.0"
description = "Servidor MCP educativo y de solo lectura para rogerlc/IADevops2026"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "httpx>=0.28,<1",
    "mcp>=1.27,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "pytest-cov>=6,<7",
    "ruff>=0.11,<1",
]

[project.scripts]
iadevops-github-mcp = "github_mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/github_mcp_server"]

[tool.pytest.ini_options]
addopts = "--cov=github_mcp_server --cov-report=term-missing --cov-fail-under=90"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
